--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -131,6 +131,7 @@ footer a {
 a {
 	text-decoration: none;
 }
+
 strong {
 	font-family: Arial;
 	font-size: 18px;
@@ -184,6 +185,7 @@ small {
 	height: 20px;
 	width: 100px;
 }
+
 #btn-group {
 	font-family: $font_family_3;
 	text-align: auto;
@@ -230,7 +232,6 @@ small {
 
 #restaurant-text {
 	text-align: center;
-	padding: 5%;
 }
 
 .image-container {
@@ -256,79 +257,66 @@ small {
 	right: 30px;
 }
 
-
-.fa-heart {
-  position: relative;
-  left: 260px;
-  top: -40px;
+.restaurant-card {
+	position: relative;
 }
 
-.far fa-heart {
-  position: relative;
-  left: 275px;
-  top: -30px;
+.heart-home {
+	position: absolute;
+	right: 20px;
+	bottom:20px;
+
+	.outline{
+		opacity: 1;
+	}
+
+	.solid {
+		opacity: 0;
+	}
 }
+
+
 
 .heart-home:hover {
-      background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
+    .outline {
+    	opacity: 0;
+    }
+    .solid {
+    	opacity: 1;
+    	background: -webkit-linear-gradient(#FF79DA, #9356DC);
+  		-webkit-background-clip: text;
+  		-webkit-text-fill-color: transparent;
+    }
+
 }
-
-.heart-home:hover .far,
-
-.heart-home  .fa {
-    display: none;
-    background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
-  }
-
-.heart-home:hover .fa {
-    display: block;
-   }
 
 
 .restaurant-wrapper {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 90px;
 }
 
 
 /*----menu css----*/
 
+
 .restaurant-name {
 	text-align: center;
-	padding-right:30px;
 	font-family: Shrikhand;
 }
 
-#heart-id {
-  position: relative;
-  left: 0px;
-  top: 0px;
+#restaurant-name {
+	text-align: left;
+	padding-left: 280px;
+	font-family: Shrikhand;
 }
 
-.heart-menu {
-	position: relative;
-	float: right;
-	display: inline;
+.menu-heart {
+	top: 33px;
+	right: 300px;
 }
-
-.heart-menu:hover {
-      background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
-}
-
-.heart-menu:hover .far,
-
-.heart-menu  .fa {
-    display: none;
-    background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
-  }
-
-.heart-menu:hover .fa {
-    display: block;
-   }
 
 .flex-container {
   display: flex;
@@ -343,25 +331,6 @@ small {
 
 .fa-arrow-left{
 	color: black;
-}
-
-.fa-heart {
-  position: relative;
-
-}
-
-.far fa-heart {
-  position: relative;
-
-}
-
-#heart-box {
-  position: relative;
-  right: 75px;
-  top: -15px;
-  margin: 0;
-  padding: 0;
-  color: #c7c3c8;
 }
 
 .menu-page-image {
