--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -249,72 +249,65 @@ small {
 }
 
 
-.fa-heart {
-  position: relative;
-  left: 260px;
-  top: -40px;
+.restaurant-card {
+	position: relative;
 }
 
-.far fa-heart {
-  position: relative;
-  left: 275px;
-  top: -30px;
+.heart-home {
+	position: relative;
+	left: 275px;
+	bottom: 50px;
+
+	.outline{
+		opacity: 1;
+	}
+
+	.solid {
+		opacity: 0;
+	}
 }
+
+
 
 .heart-home:hover {
-      background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
+    .outline {
+    	opacity: 0;
+    }
+    .solid {
+    	opacity: 1;
+    	background: -webkit-linear-gradient(#FF79DA, #9356DC);
+  		-webkit-background-clip: text;
+  		-webkit-text-fill-color: transparent;
+    }
+
 }
 
-.heart-home:hover .far,
 
-.heart-home  .fa {
-    display: none;
-    background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
-  }
-
-.heart-home:hover .fa {
-    display: block;
-   }
+.restaurant-wrapper {
+	display: center;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
 
 
 /*----menu css----*/
 
+
 .restaurant-name {
 	text-align: left;
-	padding-left: 20px;
+	padding-left: 75px;
 	font-family: Shrikhand;
 }
 
-#heart-id {
-  position: relative;
-  left: 0px;
-  top: 0px;
+#restaurant-name {
+	text-align: left;
+	padding-left: 75px;
+	font-family: Shrikhand;
 }
 
-.heart-menu {
-	position: relative;
-	float: right;
-	display: inline;
+.menu-heart {
+	right: 30px;
 }
-
-.heart-menu:hover {
-      background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
-}
-
-.heart-menu:hover .far,
-
-.heart-menu  .fa {
-    display: none;
-    background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-      -webkit-background-clip: text;
-  }
-
-.heart-menu:hover .fa {
-    display: block;
-   }
 
 .flex-container {
   display: flex;
@@ -338,24 +331,20 @@ small {
 	position: relative;
 }
 
-.fa-heart {
-  position: relative;
 
-}
 
-.far fa-heart {
-  position: relative;
+// .far fa-heart {
+//   position: relative;
+// }
 
-}
-
-#heart-box {
-  position: relative;
-  right: 75px;
-  top: -15px;
-  margin: 0;
-  padding: 0;
-  color: #c7c3c8;
-}
+// #heart-box {
+//   position: relative;
+//   right: 75px;
+//   top: -15px;
+//   margin: 0;
+//   padding: 0;
+//   color: #c7c3c8;
+// }
 
 #background {
 	background-color: #F7F7F7;
