link color change

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -103,7 +103,8 @@ footer a {
   width: 15px; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: black; }
 
 strong {
   font-family: Arial;
