--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,8 @@ header {
   text-align: center; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: black; }
 
 a:visited {
   color: black;
