--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -118,6 +118,7 @@ footer a {
 
 a {
 	text-decoration: none;
+	color: black;
 }
 strong {
 	font-family: Arial;
@@ -330,21 +331,6 @@ small {
 	top: 50px;
 	position: relative;
 }
-
-
-
-// .far fa-heart {
-//   position: relative;
-// }
-
-// #heart-box {
-//   position: relative;
-//   right: 75px;
-//   top: -15px;
-//   margin: 0;
-//   padding: 0;
-//   color: #c7c3c8;
-// }
 
 #background {
 	background-color: #F7F7F7;
