--- a/scss/index.scss
+++ b/scss/index.scss
@@ -52,9 +52,13 @@ p {
 	font-family: $font_family_4;
 }
 
-body {
-	position: static;
-	margin: 0 auto;
+html, body, {
+    position: static;
+    margin: 0 auto;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
 }
 
 #order {
