btn center work

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -157,8 +157,7 @@ small {
   font-family: sans-serif;
   text-align: auto;
   display: block;
-  padding: 3%;
-  background-color: white; }
+  padding: 3%; }
 
 .btn-center {
   position: relative;
