--- a/css/mobile.css
+++ b/css/mobile.css
@@ -155,13 +155,11 @@ small {
   font-family: sans-serif;
   text-align: auto;
   display: block;
-  padding: 3%;
-  background-color: white; }
+  padding: 3%; }
 
 .btn-center {
-  display: grid;
-  width: 30%;
-  margin: 50px; }
+  position: relative;
+  margin: 10px; }
 
 .btn-primary {
   font-family: helvetica;
@@ -171,7 +169,7 @@ small {
   padding: 20px;
   border: none;
   display: center;
-  width: 300px;
+  width: 295px;
   border: none;
   border-radius: 25px;
   height: 70px;
