--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,6 +8,9 @@ div {
 html {
   background-color: #B1B1B1; }
 
+main {
+  justify-content: center; }
+
 body {
   position: absolute;
   left: 20%;
@@ -19,9 +22,7 @@ body {
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
-  background-color: white;
-  width: 990px;
-  height: 400px; }
+  background-color: white; }
 
 @keyframes mymove {
   from {
@@ -155,19 +156,15 @@ small {
   height: 20px;
   width: 100px; }
 
-#btn-group {
+.how {
+  text-align: center; }
+
+.btn-group {
   font-family: sans-serif;
   text-align: auto;
-  display: block;
+  display: flex;
   padding: 3%;
   background-color: white; }
-
-.btn-center {
-  position: relative;
-  left: 250px;
-  width: 30%;
-  display: grid;
-  margin: 50px; }
 
 .btn-primary {
   font-family: helvetica;
@@ -175,14 +172,12 @@ small {
   font-size: 15px;
   text-align: left;
   padding: 30px;
-  border: none;
-  display: center;
-  width: 330px;
+  width: 100%;
+  height: 100%;
   border: none;
   border-radius: 25px;
-  height: 70px;
   box-shadow: 5px 8px 5px 1px #EDE9E9;
-  margin: 15px; }
+  margin: 35px; }
 
 .btn-primary:hover {
   background-color: #EDD6F5;
@@ -196,6 +191,9 @@ small {
 
 #restaurant-text {
   text-align: center; }
+
+.restaurant-card {
+  position: relative; }
 
 .image-container {
   background-color: white;
@@ -218,9 +216,6 @@ small {
   position: relative;
   right: 30px; }
 
-.restaurant-card {
-  position: relative; }
-
 .heart-home {
   position: absolute;
   right: 20px;
@@ -242,10 +237,15 @@ small {
 .restaurant-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 90px; }
 
 /*----menu css----*/
+.second {
+  position: absolute;
+  width: 990px;
+  height: 400px; }
+
 .restaurant-name {
   text-align: center;
   font-family: Shrikhand; }
@@ -281,7 +281,7 @@ small {
 #background {
   background-color: #F7F7F7;
   position: absolute;
-  top: 350px;
+  top: 345px;
   border-radius: 40px 40px 0px 0px;
   z-index: 2; }
 
