--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,10 +5,12 @@
 div {
   font-family: Roboto; }
 
+main {
+  justify-content: center; }
+
 body {
   margin: 0 auto;
-  position: relative;
-  width: 100%; }
+  position: relative; }
 
 .loading-container {
   opacity: 0;
@@ -151,11 +153,14 @@ small {
   height: 20px;
   width: 100px; }
 
-#btn-group {
+.how {
+  padding: 5%; }
+
+.btn-group {
   font-family: sans-serif;
   text-align: auto;
-  display: block;
-  padding: 3%; }
+  padding: 10%;
+  padding-left: 10%; }
 
 .btn-center {
   position: relative;
@@ -229,8 +234,8 @@ small {
 
 .restaurant-wrapper {
   display: center;
-  flex-wrap: wrap;
-  justify-content: space-between; }
+  flex-direction: column;
+  align-items: center; }
 
 /*----menu css----*/
 .restaurant-name {
