--- a/css/tablet.css
+++ b/css/tablet.css
@@ -8,10 +8,13 @@ div {
 html {
   background-color: #B1B1B1; }
 
+main {
+  justify-content: center; }
+
 body {
   position: absolute;
-  left: 10%;
-  right: 10%; }
+  left: 5%;
+  right: 5%; }
 
 .loading-container {
   position: absolute;
@@ -20,8 +23,8 @@ body {
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
-  background-color: white;
-  width: 474px; }
+  width: 474px;
+  background-color: white; }
 
 @keyframes mymove {
   from {
@@ -153,11 +156,15 @@ small {
   height: 20px;
   width: 100px; }
 
-#btn-group {
+.how {
+  padding: 5%; }
+
+.btn-group {
   font-family: sans-serif;
   text-align: auto;
   display: block;
-  padding: 3%; }
+  padding: 10%;
+  background-color: white; }
 
 .btn-center {
   position: relative;
@@ -185,7 +192,6 @@ small {
 
 .restaurants {
   background-color: #F7F7F7;
-  text-indent: 30px;
   padding-top: 40px;
   padding-bottom: 60px; }
 
@@ -195,26 +201,28 @@ small {
 .image-container {
   background-color: white;
   padding-top: 0%;
-  padding-bottom: 75px;
+  padding-bottom: 5px;
   border-radius: 20px;
-  width: 340px;
-  height: 180px;
-  margin: auto;
+  width: 100%;
   margin-top: 30px;
   line-height: 0.2;
   box-shadow: 5px 8px 5px 1px #EDE9E9;
   border-radius: 40px 40px 25px 25px; }
 
+.image-container h3, .image-container p {
+  margin-left: 10px; }
+
 .menu-image {
   padding-top: 0%;
   border-radius: 20px;
-  width: 340px;
+  width: 100%;
   height: 180px;
-  position: relative;
-  right: 30px; }
+  object-fit: cover; }
 
 .restaurant-card {
-  position: relative; }
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px; }
 
 .heart-home {
   position: absolute;
@@ -237,8 +245,8 @@ small {
 .restaurant-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 15%; }
+  justify-content: center;
+  padding: 90px; }
 
 /*----menu css----*/
 .restaurant-name {
