--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -23,6 +23,10 @@ html {
 	background-color: #B1B1B1;
 }
 
+main {
+	justify-content: center;
+}
+
 body {
 	position: absolute;
     left: 20%;
@@ -36,8 +40,6 @@ body {
   animation-fill-mode: forwards;
   animation-delay: 2s;
   background-color: white;
-  width: 990px;
-  height: 400px;
 }
 
 @keyframes mymove {
@@ -187,21 +189,18 @@ small {
 	width: 100px;
 }
 
-#btn-group {
+.how {
+	text-align: center;
+}
+
+.btn-group {
 	font-family: $font_family_3;
 	text-align: auto;
-	display: block;
+	display: flex;
 	padding: 3%;
 	background-color: white;
 }
 
-.btn-center{
-	position: relative;
-	left: 250px;
-	width: 30%;
-	display: grid;
-	margin: 50px;
-}
 
 .btn-primary {
 	font-family: $font_family_4;
@@ -209,14 +208,12 @@ small {
 	font-size: 15px;
 	text-align: left;
 	padding: 30px;
-	border: none;
-	display: center;
-	width: 330px;
+	width: 100%;
+	height: 100%;
 	border: none;
 	border-radius: 25px;
-	height: 70px;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
-	margin: 15px;
+	margin: 35px;
 } 
 
 .btn-primary:hover {
@@ -233,6 +230,10 @@ small {
 
 #restaurant-text {
 	text-align: center;
+}
+
+.restaurant-card {
+	position: relative;
 }
 
 .image-container {
@@ -256,10 +257,6 @@ small {
 	height: 180px;
 	position: relative; 
 	right: 30px;
-}
-
-.restaurant-card {
-	position: relative;
 }
 
 .heart-home {
@@ -295,13 +292,18 @@ small {
 .restaurant-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	padding: 90px;
 }
 
 
 /*----menu css----*/
 
+.second {
+	position: absolute;
+  	width: 990px;
+  	height: 400px;
+}
 
 .restaurant-name {
 	text-align: center;
@@ -345,7 +347,7 @@ small {
 #background {
 	background-color: #F7F7F7;
 	position: absolute;
-	top: 350px;
+	top: 345px;
 	border-radius: 40px 40px 0px 0px;
 	z-index: 2;
 }
