--- a/scss/index.scss
+++ b/scss/index.scss
@@ -52,7 +52,7 @@ p {
 	font-family: $font_family_4;
 }
 
-html, body, {
+body {
     position: static;
     margin: 0 auto;
     top:0;
@@ -82,7 +82,8 @@ html, body, {
 	height: 20px;
 	width: 100px;
 }
-#btn-group {
+
+.btn-group {
 	font-family: $font_family_3;
 	text-align: auto;
 	display: block;
@@ -101,17 +102,3 @@ html, body, {
 	transition: all 0.5s;
 } 
 
-.btn-primary:hover {
-}
-
-.restaurants {
-	background-color: purple;
-	text-indent: 30px;
-}
-
-.section {
-	 font-family: $font_family_1;
-	 width: 45px;
-	 padding-bottom: 3px;
-	 border-bottom: solid #99E2D0;
-}
