--- a/scss/tablet.scss
+++ b/scss/tablet.scss
@@ -23,10 +23,14 @@ html {
 	background-color: #B1B1B1;
 }
 
+main {
+	justify-content: center;
+}
+
 body {
 	position: absolute;
-    left: 10%;
-    right: 10%;
+    left: 5%;
+    right: 5%;
 }
 
 .loading-container {
@@ -36,8 +40,8 @@ body {
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
-  background-color: white;
   width: 474px;
+  background-color: white;
 }
 
 @keyframes mymove {
@@ -183,11 +187,16 @@ small {
 	width: 100px;
 }
 
-#btn-group {
+.how {
+	padding: 5%;
+}
+
+.btn-group {
 	font-family: $font_family_3;
 	text-align: auto;
 	display: block;
-	padding: 3%;
+	padding: 10%;
+	background-color: white;
 }
 
 .btn-center{
@@ -219,7 +228,7 @@ small {
 
 .restaurants {
 	background-color: #F7F7F7;
-	text-indent: 30px;
+	// text-indent: 30px;
 	padding-top: 40px;
 	padding-bottom: 60px;
 }
@@ -231,29 +240,34 @@ small {
 .image-container {
 	background-color: $color_1;
 	padding-top: 0%;
-	padding-bottom: 75px;
+	padding-bottom: 5px;
 	border-radius: 20px;
-	width: 340px;
-	height: 180px;
-	margin: auto;
+	width: 100%;
 	margin-top: 30px;
 	line-height: 0.2;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
 	border-radius: 40px 40px 25px 25px;
 }
 
+.image-container h3, .image-container p {
+	margin-left: 10px;
+}
+
 .menu-image {
 	padding-top: 0%;
 	border-radius: 20px;
-	width: 340px;
+	width: 100%;
 	height: 180px;
-	position: relative; 
-	right: 30px;
+	object-fit: cover;
+	// position: relative; 
+	// right: 30px;
 }
 
 
 .restaurant-card {
 	position: relative;
+	width: 100%;
+	margin-bottom: 10px;
 }
 
 .heart-home {
@@ -289,8 +303,8 @@ small {
 .restaurant-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 15%;
+	justify-content: center;
+	padding: 90px;
 }
 
 
