--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -28,6 +28,7 @@ main {
 }
 
 body {
+	background-color: white;
 	position: absolute;
     left: 20%;
     right: 20%;
@@ -299,26 +300,21 @@ small {
 
 /*----menu css----*/
 
-.second {
-	position: absolute;
-  	width: 990px;
-  	height: 400px;
-}
+
 
 .restaurant-name {
-	text-align: center;
 	font-family: Shrikhand;
 }
 
 #restaurant-name {
-	text-align: left;
-	padding-left: 280px;
+	left: 25%;
 	font-family: Shrikhand;
 }
 
 .menu-heart {
-	top: 33px;
-	right: 300px;
+	position: relative;
+	left: 235px;
+	bottom: 60px;
 }
 
 .flex-container {
@@ -336,11 +332,14 @@ small {
 	color: black;
 }
 
+.rest-image{
+	position: relative;
+}
+
 .menu-page-image {
 	position: relative;
 	height: 300px;
-	width: 474px;
-	left: 250px;
+	width: 100%;
 	border-radius: 40px 40px 0px 0px
 }
 
@@ -348,12 +347,16 @@ small {
 	background-color: #F7F7F7;
 	position: absolute;
 	top: 345px;
+	right: 0%;
+	left: 0%;
 	border-radius: 40px 40px 0px 0px;
-	z-index: 2;
+}
+
+.nc {
+	background-color: #F7F7F7;
 }
 
 .menu-container {
-	width: 970px;
 	font-size: 15px;
 	padding-top: 10px;
 	padding-left: 10px;
@@ -364,7 +367,7 @@ small {
 .part {
 	 font-family: $font_family_1;
 	 position: relative;
-	 left: 450px;
+	 left: 45%;
 	 padding-top: 30px;
 }
 
