--- a/css/tablet.css
+++ b/css/tablet.css
@@ -13,8 +13,7 @@ main {
 
 body {
   position: absolute;
-  left: 5%;
-  right: 5%; }
+  left: 5%; }
 
 .loading-container {
   position: absolute;
@@ -284,7 +283,8 @@ small {
 #background {
   background-color: #F7F7F7;
   position: absolute;
-  width: 474px;
+  right: 0%;
+  left: 0%;
   border-radius: 40px 40px 0px 0px; }
 
 .menu-container {
