--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,25 +5,13 @@
 div {
   font-family: Roboto; }
 
-html {
-  background-color: #B1B1B1; }
-
-main {
-  justify-content: center; }
-
-body {
-  background-color: white;
-  position: absolute;
-  left: 20%;
-  right: 20%; }
-
 .loading-container {
   position: center;
   opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
-  background-color: white; }
+  background-color: #383B3D; }
 
 @keyframes mymove {
   from {
@@ -158,7 +146,9 @@ small {
   width: 100px; }
 
 .how {
-  text-align: center; }
+  text-align: center;
+  background-color: white;
+  padding: .5%; }
 
 .btn-group {
   font-family: sans-serif;
@@ -170,7 +160,6 @@ small {
 .btn-primary {
   font-family: helvetica;
   background-color: #F7F7F7;
-  font-size: 15px;
   text-align: left;
   padding: 30px;
   width: 100%;
@@ -243,16 +232,19 @@ small {
 
 /*----menu css----*/
 .restaurant-name {
-  font-family: Shrikhand; }
+  font-family: Shrikhand;
+  text-align: center;
+  padding-top: 15px; }
 
 #restaurant-name {
-  left: 25%;
-  font-family: Shrikhand; }
+  font-family: Shrikhand;
+  text-align: center;
+  padding-top: 15px; }
 
 .menu-heart {
   position: relative;
   left: 235px;
-  bottom: 60px; }
+  bottom: 70px; }
 
 .flex-container {
   display: flex;
@@ -267,7 +259,8 @@ small {
   color: black; }
 
 .rest-image {
-  position: relative; }
+  position: relative;
+  background-color: white; }
 
 .menu-page-image {
   position: relative;
@@ -275,29 +268,20 @@ small {
   width: 100%;
   border-radius: 40px 40px 0px 0px; }
 
-#background {
-  background-color: #F7F7F7;
-  position: absolute;
-  top: 345px;
-  right: 0%;
-  left: 0%;
-  border-radius: 40px 40px 0px 0px; }
-
 .nc {
   background-color: #F7F7F7; }
 
 .menu-container {
-  font-size: 15px;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: center; }
+  position: relative;
+  bottom: 50px;
+  width: 100%;
+  background-color: #F7F7F7;
+  border-radius: 40px 40px 0px 0px; }
 
 .part {
   font-family: Lucida Bright;
   position: relative;
-  left: 45%;
-  padding-top: 30px; }
+  left: 50%; }
 
 .underline {
   background-color: #99E2D0;
@@ -344,7 +328,8 @@ small {
 
 #btn-container {
   padding-top: 100px;
-  padding-bottom: 25px; }
+  padding-bottom: 25px;
+  text-align: center; }
 
 #order-btn {
   font-size: 17.5px;
@@ -377,6 +362,7 @@ small {
   color: #333;
   letter-spacing: 2px;
   position: relative;
+  left: 30px;
   transition: all .35s; }
 
 .anime span {
