--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,6 @@ img {
   padding-bottom: 10px; }
 
 header {
-  width: auto;
-  height: auto;
   text-align: center; }
 
 a {
@@ -35,13 +33,12 @@ h3 {
 p {
   font-family: helvetica; }
 
-body {
-  position: static;
-  margin: 0 auto;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0; }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; }
 
 #order {
   font-size: 17.5px;
