--- a/css/tablet.css
+++ b/css/tablet.css
@@ -5,25 +5,13 @@
 div {
   font-family: Roboto; }
 
-html {
-  background-color: #B1B1B1; }
-
-main {
-  justify-content: center; }
-
-body {
-  position: absolute;
-  left: 5%; }
-
 .loading-container {
-  position: absolute;
-  left: 100px;
+  position: center;
   opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
-  width: 474px;
-  background-color: white; }
+  background-color: #383B3D; }
 
 @keyframes mymove {
   from {
@@ -32,9 +20,12 @@ body {
     opacity: 1; } }
 
 #spinner {
-  position: relative; }
+  position: relative;
+  top: 45%; }
 
 #hideMe {
+  position: relative;
+  left: 50%;
   -moz-animation: cssAnimation 0s ease-in 2s forwards;
   /* Firefox */
   -webkit-animation: cssAnimation 0s ease-in 2s forwards;
@@ -75,8 +66,7 @@ header {
   width: auto;
   height: auto;
   text-align: center;
-  background-color: white;
-  width: 474px; }
+  background-color: white; }
 
 .location {
   font-family: Lucida Bright;
@@ -156,34 +146,27 @@ small {
   width: 100px; }
 
 .how {
-  padding: 5%; }
+  text-align: center;
+  background-color: white;
+  padding: .5%; }
 
 .btn-group {
   font-family: sans-serif;
   text-align: auto;
-  display: block;
-  padding: 10%;
+  display: flex;
+  padding: 3%;
   background-color: white; }
-
-.btn-center {
-  position: relative;
-  display: grid;
-  margin: 50px; }
 
 .btn-primary {
   font-family: helvetica;
   background-color: #F7F7F7;
-  font-size: 15px;
-  text-align: left;
   padding: 30px;
-  border: none;
-  display: center;
-  width: 330px;
+  width: 100%;
+  height: 100%;
   border: none;
   border-radius: 25px;
-  height: 70px;
   box-shadow: 5px 8px 5px 1px #EDE9E9;
-  margin: 15px; }
+  margin: 35px; }
 
 .btn-primary:hover {
   background-color: #EDD6F5;
@@ -191,37 +174,36 @@ small {
 
 .restaurants {
   background-color: #F7F7F7;
+  text-indent: 30px;
   padding-top: 40px;
   padding-bottom: 60px; }
 
 #restaurant-text {
   text-align: center; }
 
+.restaurant-card {
+  position: relative; }
+
 .image-container {
   background-color: white;
   padding-top: 0%;
-  padding-bottom: 5px;
+  padding-bottom: 75px;
   border-radius: 20px;
-  width: 100%;
+  width: 340px;
+  height: 180px;
+  margin: auto;
   margin-top: 30px;
   line-height: 0.2;
   box-shadow: 5px 8px 5px 1px #EDE9E9;
   border-radius: 40px 40px 25px 25px; }
 
-.image-container h3, .image-container p {
-  margin-left: 10px; }
-
 .menu-image {
   padding-top: 0%;
   border-radius: 20px;
-  width: 100%;
+  width: 340px;
   height: 180px;
-  object-fit: cover; }
-
-.restaurant-card {
   position: relative;
-  width: 100%;
-  margin-bottom: 10px; }
+  right: 30px; }
 
 .heart-home {
   position: absolute;
@@ -244,23 +226,24 @@ small {
 .restaurant-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 90px; }
 
 /*----menu css----*/
 .restaurant-name {
-  text-align: left;
-  padding-left: 45px;
-  font-family: Shrikhand; }
+  font-family: Shrikhand;
+  text-align: center;
+  padding-top: 5px; }
 
 #restaurant-name {
-  text-align: left;
-  padding-left: 25px;
-  font-family: Shrikhand; }
+  font-family: Shrikhand;
+  text-align: center;
+  padding-top: 5px; }
 
 .menu-heart {
-  top: 33px;
-  right: 30px; }
+  position: relative;
+  left: 235px;
+  bottom: 70px; }
 
 .flex-container {
   display: flex;
@@ -269,35 +252,35 @@ small {
 .flex-container > div {
   position: absolute;
   top: 15px;
-  left: 30px; }
+  left: 130px; }
 
 .fa-arrow-left {
   color: black; }
 
-.menu-page-image {
-  height: 300px;
-  width: 474px;
-  top: 50px;
-  position: relative; }
+.rest-image {
+  position: relative;
+  background-color: white; }
 
-#background {
-  background-color: #F7F7F7;
-  position: absolute;
-  right: 0%;
-  left: 0%;
+.menu-page-image {
+  position: relative;
+  height: 300px;
+  width: 100%;
   border-radius: 40px 40px 0px 0px; }
 
+.nc {
+  background-color: #F7F7F7; }
+
 .menu-container {
-  position: center;
-  font-size: 15px;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: center; }
+  position: relative;
+  bottom: 60px;
+  width: 100%;
+  background-color: #F7F7F7;
+  border-radius: 40px 40px 0px 0px; }
 
 .part {
   font-family: Lucida Bright;
   position: relative;
+  left: 45%;
   padding-top: 30px; }
 
 .underline {
@@ -305,7 +288,7 @@ small {
   position: relative;
   height: 4px;
   border: none;
-  width: 40px;
+  width: 65px;
   bottom: 7px;
   text-align: left;
   margin: 0px; }
@@ -345,7 +328,8 @@ small {
 
 #btn-container {
   padding-top: 100px;
-  padding-bottom: 25px; }
+  padding-bottom: 25px;
+  text-align: center; }
 
 #order-btn {
   font-size: 17.5px;
