--- a/scss/index.scss
+++ b/scss/index.scss
@@ -20,8 +20,8 @@ img {
 	padding-bottom: 10px;
 }
 header {
-	width: auto;
-	height: auto;
+	// width: auto;
+	// height: auto;
 	text-align: center;
 }
 
@@ -52,13 +52,12 @@ p {
 	font-family: $font_family_4;
 }
 
-body {
-    position: static;
-    margin: 0 auto;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
+html, body {
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 #order {
