--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -247,7 +247,7 @@ small {
 .menu-image {
 	padding-top: 0%;
 	border-radius: 20px;
-	width: 340px;
+	width: 100%;
 	height: 180px;
 	position: relative; 
 	right: 30px;
@@ -297,21 +297,25 @@ small {
 
 /*----menu css----*/
 
+.rest-image {
+	width: 100%;
+}
+
 
 .restaurant-name {
 	text-align: left;
-	padding-left: 75px;
+	padding-left: 15%;
 	font-family: Shrikhand;
 }
 
 #restaurant-name {
 	text-align: left;
-	padding-left: 75px;
+	padding-left: 70px;
 	font-family: Shrikhand;
 }
 
 .menu-heart {
-	right: 30px;
+	bottom: 57px;
 }
 
 .flex-container {
@@ -331,30 +335,27 @@ small {
 
 .menu-page-image {
 	height: 300px;
-	width: 474px;
+	width: 100%;
 	top: 50px;
 	position: relative;
 }
 
-#background {
+.nc {
 	background-color: #F7F7F7;
-	position: absolute;
-	border-radius: 40px 40px 0px 0px;
-	z-index: 2;
 }
 
 .menu-container {
-	font-size: 15px;
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-	text-align: center;
+	position: absolute;
+	width: 100%;
+	background-color: #F7F7F7;
+	border-radius: 40px 40px 0px 0px;
 }
 
 .part {
 	 font-family: $font_family_1;
 	 position: relative;
 	 padding-top: 30px;
+	 padding-left: 30px;
 }
 
 .underline {
@@ -395,6 +396,7 @@ small {
 #btn-container {
 	padding-top: 100px;
 	padding-bottom: 25px;
+	text-align: center;
 }
 
 #order-btn {
@@ -420,7 +422,7 @@ small {
   margin: auto;
   box-shadow: 0.7px 5px #EDE9E9;
   display: block;
-  width: 445px;
+  width: 90%;
   height: 90px;
   font-size: 18px;
   font-family: Arial;
@@ -488,7 +490,7 @@ small {
 
 .price {
 	position: relative;
-	right: 40px;
+	right: 10%;
 	bottom: 40px;
 	text-align: right;
 	padding-right: 40px;
