--- a/scss/tablet.scss
+++ b/scss/tablet.scss
@@ -19,28 +19,13 @@ div {
   font-family: Roboto;
 }
 
-html {
-	background-color: #B1B1B1;
-}
-
-main {
-	justify-content: center;
-}
-
-body {
-	position: absolute;
-    left: 5%;
-}
-
 .loading-container {
-  position: absolute;
-  left: 100px;
+  position: center;
   opacity:0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
-  width: 474px;
-  background-color: white;
+  background-color: $background_color_2;
 }
 
 @keyframes mymove {
@@ -50,9 +35,12 @@ body {
 
 #spinner {
 	position: relative;
+  top: 45%;
 }
 
 #hideMe {
+	position: relative;
+	left:50%;
     -moz-animation: cssAnimation 0s ease-in 2s forwards;
     /* Firefox */
     -webkit-animation: cssAnimation 0s ease-in 2s forwards;
@@ -100,7 +88,6 @@ header {
 	height: auto;
 	text-align: center;
 	background-color: white;
-	width: 474px;
 }
 
 .location {
@@ -110,6 +97,7 @@ header {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
 footer {
   background-color: $background_color_2;
   color: $color_1;
@@ -132,6 +120,7 @@ a {
 	text-decoration: none;
 	color: black;
 }
+
 strong {
 	font-family: Arial;
 	font-size: 18px;
@@ -187,37 +176,30 @@ small {
 }
 
 .how {
-	padding: 5%;
+	text-align: center;
+	background-color: white;
+	padding: .5%
 }
 
 .btn-group {
 	font-family: $font_family_3;
 	text-align: auto;
-	display: block;
-	padding: 10%;
+	display: flex;
+	padding: 3%;
 	background-color: white;
 }
 
-.btn-center{
-	position: relative;
-	display: grid;
-	margin: 50px;
-}
 
 .btn-primary {
 	font-family: $font_family_4;
 	background-color: #F7F7F7;
-	font-size: 15px;
-	text-align: left;
 	padding: 30px;
-	border: none;
-	display: center;
-	width: 330px;
+	width: 100%;
+	height: 100%;
 	border: none;
 	border-radius: 25px;
-	height: 70px;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
-	margin: 15px;
+	margin: 35px;
 } 
 
 .btn-primary:hover {
@@ -227,7 +209,7 @@ small {
 
 .restaurants {
 	background-color: #F7F7F7;
-	// text-indent: 30px;
+	text-indent: 30px;
 	padding-top: 40px;
 	padding-bottom: 60px;
 }
@@ -236,37 +218,31 @@ small {
 	text-align: center;
 }
 
+.restaurant-card {
+	position: relative;
+}
+
 .image-container {
 	background-color: $color_1;
 	padding-top: 0%;
-	padding-bottom: 5px;
+	padding-bottom: 75px;
 	border-radius: 20px;
-	width: 100%;
+	width: 340px;
+	height: 180px;
+	margin: auto;
 	margin-top: 30px;
 	line-height: 0.2;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
 	border-radius: 40px 40px 25px 25px;
 }
 
-.image-container h3, .image-container p {
-	margin-left: 10px;
-}
-
 .menu-image {
 	padding-top: 0%;
 	border-radius: 20px;
-	width: 100%;
+	width: 340px;
 	height: 180px;
-	object-fit: cover;
-	// position: relative; 
-	// right: 30px;
-}
-
-
-.restaurant-card {
-	position: relative;
-	width: 100%;
-	margin-bottom: 10px;
+	position: relative; 
+	right: 30px;
 }
 
 .heart-home {
@@ -302,7 +278,7 @@ small {
 .restaurant-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-evenly;
 	padding: 90px;
 }
 
@@ -310,21 +286,23 @@ small {
 /*----menu css----*/
 
 
+
 .restaurant-name {
-	text-align: left;
-	padding-left: 45px;
 	font-family: Shrikhand;
+	text-align: center;
+	padding-top: 5px;
 }
 
 #restaurant-name {
-	text-align: left;
-	padding-left: 25px;
 	font-family: Shrikhand;
+	text-align: center;
+	padding-top: 5px;
 }
 
 .menu-heart {
-	top: 33px;
-	right: 30px;
+	position: relative;
+	left: 235px;
+	bottom: 70px;
 }
 
 .flex-container {
@@ -335,40 +313,41 @@ small {
 .flex-container > div {
 	position: absolute;
 	top: 15px;
-	left: 30px;
+	left: 130px;
 }
 
 .fa-arrow-left{
 	color: black;
 }
 
-.menu-page-image {
-	height: 300px;
-	width: 474px;
-	top: 50px;
+.rest-image{
 	position: relative;
+	background-color: white;
 }
 
-#background {
+.menu-page-image {
+	position: relative;
+	height: 300px;
+	width: 100%;
+	border-radius: 40px 40px 0px 0px
+}
+
+.nc {
 	background-color: #F7F7F7;
-	position: absolute;
-	right: 0%;
-	left: 0%;
-	border-radius: 40px 40px 0px 0px;
 }
 
 .menu-container {
-	position: center;
-	font-size: 15px;
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-	text-align: center;
+	position: relative;
+	bottom: 60px;
+	width: 100%;
+	background-color: #F7F7F7;
+	border-radius: 40px 40px 0px 0px;
 }
 
 .part {
 	 font-family: $font_family_1;
 	 position: relative;
+	 left: 45%;
 	 padding-top: 30px;
 }
 
@@ -377,13 +356,14 @@ small {
   position: relative;
   height: 4px;
   border: none;
-  width: 40px;
+  width: 65px;
   bottom: 7px;
   text-align: left;
   margin: 0px;
 }
 
 .food {
+    
     opacity: 0;
 	height: 90px;
 	text-align: left;
@@ -409,6 +389,7 @@ small {
 #btn-container {
 	padding-top: 100px;
 	padding-bottom: 25px;
+	text-align: center;
 }
 
 #order-btn {
