--- a/css/tablet.css
+++ b/css/tablet.css
@@ -258,6 +258,8 @@ small {
   color: black; }
 
 .rest-image {
+  padding-left: 20%;
+  padding-right: 20%;
   position: relative;
   background-color: white; }
 
