--- a/css/desktop.css
+++ b/css/desktop.css
@@ -259,6 +259,8 @@ small {
   color: black; }
 
 .rest-image {
+  padding-left: 25%;
+  padding-right: 25%;
   position: relative;
   background-color: white; }
 
