--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -193,9 +193,9 @@ small {
 
 .btn-group {
 	font-family: $font_family_3;
-	text-align: auto;
-	padding: 10%;
-	padding-left: 10%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .btn-center{
