last scss touch ups

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -108,8 +108,7 @@ i {
 p {
   font-family: helvetica;
   text-align: left;
-  letter-spacing: -1px;
-  line-height: 10px; }
+  letter-spacing: -1px; }
 
 small {
   position: relative;
@@ -357,7 +356,7 @@ small {
   display: block;
   width: 445px;
   height: 90px;
-  line-height: -10px;
+  line-height: 15px;
   font-size: 18px;
   font-family: Arial;
   text-decoration: none;
@@ -415,6 +414,13 @@ small {
 .price {
   position: relative;
   right: 37px;
-  bottom: 20px;
+  bottom: 30px;
+  text-align: right;
+  padding-right: 40px; }
+
+.double-price {
+  position: relative;
+  right: 37px;
+  bottom: 30px;
   text-align: right;
   padding-right: 40px; }
