--- a/css/mobile.css
+++ b/css/mobile.css
@@ -116,8 +116,7 @@ i {
 p {
   font-family: helvetica;
   text-align: left;
-  letter-spacing: -1px;
-  line-height: -10px; }
+  letter-spacing: -1px; }
 
 small {
   position: relative;
@@ -243,16 +242,17 @@ small {
 
 .restaurant-name {
   text-align: left;
-  padding-left: 15%;
+  padding-left: 8%;
   font-family: Shrikhand; }
 
 #restaurant-name {
   text-align: left;
-  padding-left: 70px;
+  padding-left: 30px;
   font-family: Shrikhand; }
 
 .menu-heart {
-  bottom: 57px; }
+  bottom: 57px;
+  left: 275px; }
 
 .flex-container {
   display: flex;
@@ -351,7 +351,7 @@ small {
   background-color: white;
   padding-top: 1.5px;
   padding-left: 10px;
-  padding-bottom: 1px;
+  padding-bottom: 9px;
   border-radius: 23px;
   text-align: left;
   margin: auto;
@@ -384,7 +384,7 @@ small {
   visibility: hidden;
   padding-top: 1.5px;
   padding-left: 10px;
-  padding-bottom: 1px;
+  padding-bottom: 9px;
   border-radius: 0px 23px 23px 0px;
   font-family: Roboto; }
 
@@ -416,5 +416,12 @@ small {
   position: relative;
   right: 10%;
   bottom: 40px;
+  text-align: right;
+  padding-right: 40px; }
+
+.double-price {
+  position: relative;
+  right: 10%;
+  bottom: 53px;
   text-align: right;
   padding-right: 40px; }
