--- a/css/tablet.css
+++ b/css/tablet.css
@@ -109,7 +109,7 @@ p {
   font-family: helvetica;
   text-align: left;
   letter-spacing: -1px;
-  line-height: 10px; }
+  line-height: 17px; }
 
 small {
   position: relative;
@@ -238,11 +238,12 @@ small {
 #restaurant-name {
   font-family: Shrikhand;
   text-align: center;
-  padding-top: 5px; }
+  padding-top: 5px;
+  font-size: 16px; }
 
 .menu-heart {
   position: relative;
-  left: 235px;
+  left: 200px;
   bottom: 70px; }
 
 .flex-container {
@@ -413,7 +414,14 @@ small {
 
 .price {
   position: relative;
-  right: 37px;
-  bottom: 20px;
+  right: 9%;
+  bottom: 30px;
+  text-align: right;
+  padding-right: 40px; }
+
+.double-price {
+  position: relative;
+  right: 9%;
+  bottom: 50px;
   text-align: right;
   padding-right: 40px; }
