--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -146,7 +146,7 @@ p {
 	font-family: $font_family_4;
 	text-align: left;
 	letter-spacing: -1px;
-	line-height:-10px;
+	// line-height:-10px;
 }
 
 small {
@@ -304,18 +304,19 @@ small {
 
 .restaurant-name {
 	text-align: left;
-	padding-left: 15%;
+	padding-left: 8%;
 	font-family: Shrikhand;
 }
 
 #restaurant-name {
 	text-align: left;
-	padding-left: 70px;
+	padding-left: 30px;
 	font-family: Shrikhand;
 }
 
 .menu-heart {
 	bottom: 57px;
+	left: 275px;
 }
 
 .flex-container {
@@ -416,7 +417,7 @@ small {
   background-color: white;
   padding-top: 1.5px;
   padding-left: 10px;
-  padding-bottom: 1px;
+  padding-bottom: 9px;
   border-radius: 23px;
   text-align: left;
   margin: auto;
@@ -451,7 +452,7 @@ small {
   visibility: hidden;
   padding-top: 1.5px;
 	padding-left: 10px;
-	padding-bottom: 1px;
+	padding-bottom: 9px;
 	border-radius: 0px 23px 23px 0px;
 	font-family: $font-family_5;
 }
@@ -492,6 +493,14 @@ small {
 	position: relative;
 	right: 10%;
 	bottom: 40px;
+	text-align: right;
+	padding-right: 40px;
+}
+
+.double-price {
+	position: relative;
+	right: 10%;
+	bottom: 53px;
 	text-align: right;
 	padding-right: 40px;
 }
